--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <title>Book List</title>
   </head>
   <body>
+    <div class="header">
+      <div class="header-overlay"></div>
+      <h1>My Virtual Library | Book List</h1>
+      <div class="search">
+        <input type="text" placeholder="search for books" />
+        <button class="search-bitton">
+          <i class="fa-solid fa-search"></i>Search
+        </button>
+      </div>
+      <i class="fa-solid fa-heart"></i>
+    </div>
+    <main>
+    <div class="side-nav"></div>
+    <div class="books-panel"></div>
+    </main>
     <script src="js/app.js"></script>
   </body>
 </html>
