--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       <i class="fa-solid fa-heart"></i>
     </div>
     <main>
-    <div class="side-nav"></div>
+    <div class="side-nav">
+        <h2>Filter <i class="fa-solid fa-filter"></i></h2>
+        <div class="genre-list"></div>
+    </div>
     <div class="books-panel"></div>
     </main>
     <script src="js/app.js"></script>
