Book cover styling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </div>
     <main>
     <div class="side-nav">
-        <h2>Filter <i class="fa-solid fa-filter"></i></h2>
+        <p>Sort alphabetically <i class="fa-solid fa-arrow-up-a-z sort"></i> <i class="fa-solid fa-arrow-up-z-a sort"></i></p>
+        <h4>Filter by genre<i class="fa-solid fa-filter"></i></h4>
         <div class="genre-list"></div>
     </div>
     <div class="books-panel"></div>
