--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/components_styles.css" />
+    <link rel="stylesheet" href="css/theme.css" />
     <script
       src="https://kit.fontawesome.com/062d0051ac.js"
       crossorigin="anonymous"
@@ -20,16 +22,26 @@
           <i class="fa-solid fa-search"></i>Search
         </button>
       </div>
-      <i class="fa-solid fa-heart"></i>
+      <div style="display: flex; align-items: center; justify-content: space-between;">
+        <div class="theme-switch">
+            <div class="circle"></div>
+            <div class="dot"><i class="fa-solid fa-sun"></i></div>
+        </div>
+        <i class="fa-solid fa-heart"></i>
+      </div>
     </div>
     <main>
-    <div class="side-nav">
-        <p>Sort alphabetically <i class="fa-solid fa-arrow-up-a-z sort"></i> <i class="fa-solid fa-arrow-up-z-a sort"></i></p>
+      <div class="side-nav">
+        <p>
+          Sort alphabetically <i class="fa-solid fa-arrow-up-a-z sort"></i>
+          <i class="fa-solid fa-arrow-up-z-a sort"></i>
+        </p>
         <h4>Filter by genre<i class="fa-solid fa-filter"></i></h4>
         <div class="genre-list"></div>
-    </div>
-    <div class="books-panel"></div>
+      </div>
+      <div class="books-panel"></div>
     </main>
     <script src="js/app.js"></script>
+    <script src="js/theme.js"></script>
   </body>
 </html>
