--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div style="display: flex; align-items: center; justify-content: space-between;">
         <div class="theme-switch">
             <div class="circle"></div>
-            <div class="dot"><i class="fa-solid fa-sun"></i></div>
+            <div class="dot"><i class="fa-solid fa-moon"></i></div>
         </div>
         <i class="fa-solid fa-heart"></i>
       </div>
