--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/components_styles.css" />
     <link rel="stylesheet" href="css/theme.css" />
+    <link rel="stylesheet" href="css/pop_up.css" />
     <script
       src="https://kit.fontawesome.com/062d0051ac.js"
       crossorigin="anonymous"
@@ -22,10 +23,16 @@
           <i class="fa-solid fa-search"></i>Search
         </button>
       </div>
-      <div style="display: flex; align-items: center; justify-content: space-between;">
+      <div
+        style="
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+        "
+      >
         <div class="theme-switch">
-            <div class="circle"></div>
-            <div class="dot"><i class="fa-solid fa-moon"></i></div>
+          <div class="circle"></div>
+          <div class="dot"><i class="fa-solid fa-moon"></i></div>
         </div>
         <i class="fa-solid fa-heart"></i>
       </div>
@@ -41,7 +48,10 @@
       </div>
       <div class="books-panel"></div>
     </main>
+    <div class="overlay"></div>
+    <div class="book-details"></div>
     <script src="js/app.js"></script>
     <script src="js/theme.js"></script>
+    <script src="js/pop_up.js"></script>
   </body>
 </html>
