--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
     </main>
     <div class="overlay"></div>
     <div class="book-details"></div>
-    <script src="js/app.js"></script>
-    <script src="js/theme.js"></script>
-    <script src="js/pop_up.js"></script>
+    <script type="module" src="js/pop_up.js"></script>
+    <script type="module" src="js/ui_elements.js"></script>
+    <script type="module" src="js/app.js"></script>
+    <script type="module" src="js/theme.js"></script>
+    <script type="module" src="js/helper_functions.js"></script>
   </body>
 </html>
