--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <body>
     <div class="header">
       <div class="header-overlay"></div>
-      <h1>My Virtual Library | Book List</h1>
+      <h1>
+        <i class="fa-solid fa-folder"></i> My Virtual Library
+        <span style="font-weight: 100; color: #ababab">|</span> Book List
+      </h1>
       <div class="search">
         <input type="text" placeholder="search for books" />
         <button class="search-bitton">
