--- a/index.html
+++ b/index.html
@@ -42,10 +42,19 @@
     </div>
     <main>
       <div class="side-nav">
-        <p>
-          Sort alphabetically <i class="fa-solid fa-arrow-up-a-z sort"></i>
-          <i class="fa-solid fa-arrow-up-z-a sort"></i>
-        </p>
+        <div
+          style="
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+          "
+        >
+          Sort alphabetically
+          <div>
+            <i class="fa-solid fa-arrow-up-a-z sort"></i>
+            <i class="fa-solid fa-arrow-up-z-a sort"></i>
+          </div>
+        </div>
         <h4>Filter by genre<i class="fa-solid fa-filter"></i></h4>
         <div class="genre-list"></div>
       </div>
