--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="circle"></div>
           <div class="dot"><i class="fa-solid fa-moon"></i></div>
         </div>
-        <i class="fa-solid fa-heart"></i>
+        <i class="fa-solid fa-heart"></i> <span class="favorite-count"></span>
       </div>
     </div>
     <main>
@@ -66,8 +66,10 @@
       <i class="fa-solid fa-times close-favorite"></i>
       <h1>Favorite Books</h1>
       <div class="favorite-books">
-        
       </div>
+    </div>
+
+    <div class="message-pop-up"> 
     </div>
 
     <script type="module" src="js/pop_up.js"></script>
@@ -76,5 +78,6 @@
     <script type="module" src="js/app.js"></script>
     <script type="module" src="js/theme.js"></script>
     <script type="module" src="js/helper_functions.js"></script>
+    <script type="module" src="js/search.js"></script>
   </body>
 </html>
