--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/components_styles.css" />
     <link rel="stylesheet" href="css/theme.css" />
     <link rel="stylesheet" href="css/pop_up.css" />
+    <link rel="stylesheet" href="css/search.css" />
     <script
       src="https://kit.fontawesome.com/062d0051ac.js"
       crossorigin="anonymous"
@@ -64,7 +65,7 @@
     <div class="book-details"></div>
     <div class="favorites-panel">
       <i class="fa-solid fa-times close-favorite"></i>
-      <h1>Favorite Books</h1>
+      <h2>Favorite Books</h2>
       <div class="favorite-books">
       </div>
     </div>
