Added a new css file for favourite books panel

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/components_styles.css" />
     <link rel="stylesheet" href="css/pop_up.css" />
     <link rel="stylesheet" href="css/search.css" />
+    <link rel="stylesheet" href="css/favourite_books.css" />
     <link rel="stylesheet" href="css/theme.css" />
     <script
       src="https://kit.fontawesome.com/062d0051ac.js"
