--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="circle"></div>
           <div class="dot"><i class="fa-solid fa-moon"></i></div>
         </div>
-        <i class="fa-solid fa-heart"></i> <span class="favorite-count"></span>
+        <i class="fa-solid fa-heart"></i> <span style="margin-left: 5px;" class="favorite-count"></span>
       </div>
     </div>
     <main>
