Added a new css file for favourite books panel

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/search.css" />
     <link rel="stylesheet" href="css/favourite_books.css" />
     <link rel="stylesheet" href="css/theme.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <script
       src="https://kit.fontawesome.com/062d0051ac.js"
       crossorigin="anonymous"
@@ -44,19 +45,6 @@
     </div>
     <main>
       <div class="side-nav">
-        <div
-          style="
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-          "
-        >
-          Sort alphabetically
-          <div>
-            <i class="fa-solid fa-arrow-up-a-z sort"></i>
-            <i class="fa-solid fa-arrow-up-z-a sort"></i>
-          </div>
-        </div>
         <h4>Filter by genre<i class="fa-solid fa-filter"></i></h4>
         <div class="genre-list"></div>
       </div>
