--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="header">
       <div class="header-overlay"></div>
       <h2>
-        <i class="fa-solid fa-folder"></i> My Virtual Library
+        <i class="fa-solid fa-book-open-reader"></i> My Virtual Library
         <span style="font-weight: 100; color: #ababab">|</span> Book List
       </h2>
       <div class="search">
