--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
     </div>
     <main>
       <div class="side-nav">
-        <h4 style="display: flex; align-items: center">
+        <p style="display: flex; align-items: center;font-size:20px;">
           Filter by genre
           <i
             class="fa-solid fa-filter"
-            style="margin-left: 50px;"
+            style="margin:20px; margin-left: 50px;"
           ></i>
-        </h4>
+        </p>
         <div class="genre-list"></div>
       </div>
       <div class="books-panel"></div>
